---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 355
expression: "zizmor().input(input_under_test(\"template-injection/template-injection-static-matrix.yml\")).args([\"--persona=auditor\"]).run()?"
---
group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
help[template-injection]: code injection via template expansion
  --> @@INPUT@@:25:36
   |
24 |         run: |
   |         --- this run block
25 |           echo "issue created: ${{ matrix.frob }}"
   |                                    ^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → High

1 finding: 0 informational, 1 low, 0 medium, 0 high
